--- a/index.html
+++ b/index.html
@@ -4,39 +4,47 @@
     <title>Test Page: Don't Panic</title>
 <meta charset="utf-8">
 <style media="screen">
-  li a {
-    color: blue;
-    border: 1px solid red;
+  a{
+    color: red;
   }
-  div {
-    border: 1px solid black;
+    #exec-bio {
+      background-color: lightgray;
+    }
+    .bio-box {
+        border: 1px solid black;
+        background-color: azure;
   }
-  div a {
-    color:green;
-  }
+    .bio-box a {
+        color: green;
+    }
+    
 </style>
 </head>
   <body>
     <h1>I'm an h1</h1>
     <ul>
 <li>
-<a href="https://example.com/">Link</a>
-</li> <li>
-<a href="https://example.com/">Link</a> </li>
+  <a href="https://example.com/">Link</a>
+</li>
 <li>
-<a href="https://example.com/">Link</a>
-</li> </ul>
+  <a href="https://example.com/">Link</a>
+</li>
+<li>
+  <a href="https://example.com/">Link</a>
+</li>
+</ul>
     <h2>I'm an h2</h2>
-    <div>
+
+<div id="exec-bio" class="bio-box">
   <a href="https://example.com/">I'm a link</a>
 </div>
-<div>
+<div id="exec-bio2" class="bio-box">
   <a href="https://example.com/">I'm a link</a>
 </div>
-<div>
+<div class="bio-box">
   <a href="https://example.com/">I'm a link</a>
 </div>
-<div>
+<div class="bio-box">
   <a href="https://example.com/">I'm a link</a>
 </div>
   </body>
