--- a/index.html
+++ b/index.html
@@ -5,14 +5,28 @@
     <style>
       /* GLOBAL STYLES */
       a {
-        color: red;
+        color: #f00;
       }
-        /* SOCIAL STYLES */
-      .social-link { color: blue;
-      }
+      /* html{background:red;} */
+      /* SOCIAL STYLES */
+    .social-link {
+      background: rgba(150,150,150,0.5);
+      color: blue;
+    }
         /* BIO STYLES */
+        .bio-wrapper {
+          font-size: 24px;
+        }
         .bio-box {
           border: 1px solid black;
+          width: 50%;
+          font-size: 1rem;
+        }
+        .bio-box h3 {
+          font-size: 1.5em;
+        }
+        .bio-copy {
+          font-size: 1em;
         }
         .bio-copy a {
           color: green;
@@ -20,7 +34,6 @@
     </style>
   </head>
   <body>
-
     <h1>I'm an h1</h1>
     <ul>
       <li>
@@ -34,6 +47,7 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
+    <div class="bio-wrapper">
     <div class="bio-box">
       <h3>Michael Hartl</h3>
       <a href="https://twitter.com/mhartl" class="social-link">here</a>
@@ -72,5 +86,6 @@
     The Future
       </p>
     </div>
+</div>
   </body>
 </html>
